# pepe

./: Makefile  README.md  TODO.md  pyproject.toml  pyrightconfig.json  requirements.txt
pepe/: __init__.py  __main__.py  config.py  pepe.py
pepe/argv/: __init__.py  create.py  install.py  push.py  shell.py  uninstall.py
pepe/core/: __init__.py  git.py  spinner.py
pepe_commands/: echo.py  test.py
