[tool.poetry]
name = "pepe"
version = "0.1.0"
description = "package manager wrapper for poetry"
authors = ["alexzanderr <alexxander18360@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^21.4.0"
click = "^8.0.3"
iniconfig = "^1.1.1"
packaging = "^21.3"
pluggy = "^1.0.0"
py = "^1.11.0"
pyparsing = "^3.0.7"
toml = "^0.10.2"
mypy = "^0.931"
core-dev = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
ptpython = "^3.0.20"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
